--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
-  "pages":[
+  "pages": [
+   
     "pages/home/home",
+    "pages/exercise/exercise",
     "pages/login/login",
-
     "pages/mine/mine",
-    
-    
     "pages/lesson/lesson",
     "pages/myexercises/myexercises",
     "pages/mylessons/mylessons",
@@ -13,27 +12,31 @@
     "pages/myquestions/myquestions",
     "pages/myrecents/myrecents",
     "pages/logs/logs"
+    
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "少儿教育",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "list": [{
-      "pagePath": "pages/home/home",
-      "text": "首页",
-      "iconPath": "./pages/images/home_light.png",
-      "selectedIconPath": "./pages/images/home_fill_light.png",
-      "selectedColor": "#fa960a"
-    },{
-      "pagePath": "pages/mine/mine",
-      "text": "我的",
-      "iconPath":"./pages/images/my.png",
-      "selectedIconPath": "./pages/images/my_fill.png",
-      "selectedColor": "#fa960a"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "./pages/images/home_light.png",
+        "selectedIconPath": "./pages/images/home_fill_light.png",
+        "selectedColor": "#fa960a"
+      },
+      {
+        "pagePath": "pages/mine/mine",
+        "text": "我的",
+        "iconPath": "./pages/images/my.png",
+        "selectedIconPath": "./pages/images/my_fill.png",
+        "selectedColor": "#fa960a"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
